--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -41,10 +41,10 @@ const cardStatus = (status: string) => {
 				color: "text-yellow-500",
 				status: "Maintenance",
 			};
-		case "abandoned":
+		case "discontinued":
 			return {
 				color: "text-red-500",
-				status: "Abandoned",
+				status: "Discontinued",
 			};
 	}
 };
@@ -63,7 +63,7 @@ const { title, description, href, image, category, status } = Astro.props;
 			</div>
 			<div
 				class:list={[
-					"badge badge-outline text-gray-500",
+					"badge badge-outline",
 					cardStatus(status)?.color || "invisible",
 				]}
 			>
