--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -5,16 +5,17 @@ import Footer from "../components/Footer.astro";
 
 interface Props {
 	title: string;
+	description: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <!DOCTYPE html>
 <html lang="en-US" class="bg-gray-100" transition:animate="slide">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="description" content="Astro description" />
+		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/images/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
