Added dark mode (experimental)

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 ---
 
 <header
-    class="header p-4 dark:bg-black bg-white text-base-content shadow-lg rounded-2xl w-full mb-4 flex flex-row"
+    class="header p-4 bg-white dark:bg-gray-800 text-base-content shadow-lg dark:border rounded-2xl w-full mb-4 flex flex-row"
 >
     <a href="/" class="inline-flex">
         <img
@@ -10,7 +10,7 @@
             alt="Logo representing the initials T B"
             class="w-24 h-24"
         />
-        <h1 class="text-black font-bold text-4xl my-auto ms-4">Tristan Bony</h1>
+        <h1 class="text-black dark:text-white font-bold text-4xl my-auto ms-4">Tristan Bony</h1>
     </a>
     
     <div class="flex-grow"></div>
