--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -52,13 +52,13 @@ const cardStatus = (status: string) => {
 const { title, description, href, image, category, status } = Astro.props;
 ---
 
-<section class="card shadow-lg bg-white dark:bg-black border md:w-[23%] m-2 w-[100%]">
+<section class="card shadow-lg bg-white dark:bg-gray-800 border md:w-[23%] m-2 w-[100%]">
 	<figure>
 		<img src={image.path} alt={image.alt || "Missing image"} />
 	</figure>
 	<article class="card-body">
 		<div class="inline">
-			<div class="badge badge-outline text-gray-500">
+			<div class="badge badge-outline text-gray-500 dark:text-gray-300">
 				{cardTitle(category)}
 			</div>
 			<div
