--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,6 @@ const d: Date = new Date();
 const year: number = d.getFullYear();
 ---
 
-<footer
-    class="footer footer-center p-4 bg-white shadow-lg rounded-2xl text-base mt-2"
->
+<footer class="footer footer-center p-4 bg-white dark:bg-gray-800 shadow-lg dark:border rounded-2xl text-base mt-2">
     <p>&copy; {year} Tristan Bony</p>
 </footer>
