--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -40,7 +40,8 @@
     </label>
 </header>
 
-<script is:inline>
+<script>
+document.addEventListener('astro:page-load', () => {
     const theme = (() => {
         if (
             typeof localStorage !== "undefined" &&
@@ -73,4 +74,13 @@
     document
         .getElementById("themeToggle")
         .addEventListener("click", handleToggleClick);
+});
 </script>
+
+<script>
+    document.addEventListener('astro:after-swap', () => {
+      localStorage.theme === 'dark'
+      ? document.documentElement.classList.add("dark")
+      : document.documentElement.classList.add("light");
+    });
+  </script>
