Improved dark theme

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -9,7 +9,7 @@ const title = frontmatter.title + " - Tristan Bony";
 <GlobalLayout title={title} description={frontmatter.description}>
 	<main
 		class="
-			shadow-lg bg-white border max-w-none rounded-2xl p-4 mb-4
+			shadow-lg bg-white max-w-none rounded-2xl p-4 mb-4
 			
 			prose prose-headings:text-black prose-h1:font-bold prose-h1:text-xl prose-a:text-blue-600 prose-p:text-justify prose-p:text-gray-800 prose-img:rounded-2xl prose-img:max-h-[500px] prose-img:w-full prose-figure:w-fit prose-figure:m-auto prose-figcaption:text-center prose-li:text-black prose-code:text-black prose-figure:border prose-figure:rounded-2xl prose-figure:p-2 prose-strong:text-black prose-li:marker:text-black
 			
