--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,8 +1,9 @@
 ---
+
 ---
 
 <header
-    class="header p-4 bg-white dark:bg-gray-800 text-base-content shadow-lg dark:border rounded-2xl w-full mb-4 flex flex-row"
+    class="header p-4 bg-white dark:bg-gray-800 text-base-content shadow-lg rounded-2xl w-full mb-4 flex flex-row"
 >
     <a href="/" class="inline-flex">
         <img
@@ -10,9 +11,11 @@
             alt="Logo representing the initials T B"
             class="w-24 h-24"
         />
-        <h1 class="text-black dark:text-white font-bold text-4xl my-auto ms-4">Tristan Bony</h1>
+        <h1 class="text-black dark:text-white font-bold text-4xl my-auto ms-4">
+            Tristan Bony
+        </h1>
     </a>
-    
+
     <div class="flex-grow"></div>
 
     <label class="swap swap-rotate place-content-evenly">
@@ -41,46 +44,46 @@
 </header>
 
 <script>
-document.addEventListener('astro:page-load', () => {
-    const theme = (() => {
-        if (
-            typeof localStorage !== "undefined" &&
-            localStorage.getItem("theme")
-        ) {
-            return localStorage.getItem("theme");
+    document.addEventListener("astro:page-load", () => {
+        const theme = (() => {
+            if (
+                typeof localStorage !== "undefined" &&
+                localStorage.getItem("theme")
+            ) {
+                return localStorage.getItem("theme");
+            }
+            if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
+                return "dark";
+            }
+            return "light";
+        })();
+
+        if (theme === "light") {
+            document.documentElement.classList.remove("dark");
+        } else {
+            document.documentElement.classList.add("dark");
         }
-        if (window.matchMedia("(prefers-color-scheme: dark)").matches) {
-            return "dark";
-        }
-        return "light";
-    })();
 
-    if (theme === "light") {
-        document.documentElement.classList.remove("dark");
-    } else {
-        document.documentElement.classList.add("dark");
-    }
+        window.localStorage.setItem("theme", theme);
 
-    window.localStorage.setItem("theme", theme);
+        const handleToggleClick = () => {
+            const element = document.documentElement;
+            element.classList.toggle("dark");
 
-    const handleToggleClick = () => {
-        const element = document.documentElement;
-        element.classList.toggle("dark");
+            const isDark = element.classList.contains("dark");
+            localStorage.setItem("theme", isDark ? "dark" : "light");
+        };
 
-        const isDark = element.classList.contains("dark");
-        localStorage.setItem("theme", isDark ? "dark" : "light");
-    };
-
-    document
-        .getElementById("themeToggle")
-        .addEventListener("click", handleToggleClick);
-});
+        document
+            .getElementById("themeToggle")
+            .addEventListener("click", handleToggleClick);
+    });
 </script>
 
 <script>
-    document.addEventListener('astro:after-swap', () => {
-      localStorage.theme === 'dark'
-      ? document.documentElement.classList.add("dark")
-      : document.documentElement.classList.add("light");
+    document.addEventListener("astro:after-swap", () => {
+        localStorage.theme === "dark"
+            ? document.documentElement.classList.add("dark")
+            : document.documentElement.classList.add("light");
     });
-  </script>
+</script>
