--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -13,7 +13,7 @@ import profilePic from "../assets/profile_pic.jpg";
 
 <section
     id="presentation"
-    class="shadow-lg bg-white dark:bg-gray-800 border w-full rounded-2xl p-4 mb-2"
+    class="shadow-lg bg-white dark:bg-gray-800 w-full rounded-2xl p-4 mb-2"
 >
     <div class="flex flex-row flex-wrap justify-around items-center">
         <article class="text-justify md:flex-[70%]">
