--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -68,10 +68,10 @@ import profilePic from "../assets/profile_pic.jpg";
             <div class="p-4 mt-4 text-center">
                 <ul>
                     <li>
-                        <span class="text-lg font-semibold"
-                            >Tristan Bony, {age}
-                            <span class="italic">(he/him)</span></span
-                        >
+                        <span class="text-lg font-semibold">
+                            Tristan Bony, {age}
+                            <span class="italic">(he/him)</span>
+                        </span>
                     </li>
                     <li>
                         <svg
@@ -90,9 +90,8 @@ import profilePic from "../assets/profile_pic.jpg";
                             ></path>
                         </svg>
                         <span class="text-md"
-                            >Student in Computer Sciences @ University of
-                            Oklahoma && ISIMA</span
-                        >
+                            >Student in Computer Sciences @ University of Oklahoma && ISIMA
+                        </span>
                     </li>
                     <li>
                         <address>
@@ -138,7 +137,7 @@ import profilePic from "../assets/profile_pic.jpg";
                                 <a
                                     href="tel:+33642089117"
                                     class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
-                                    >+33(0)6 42 08 91 17</a
+                                >+33(0)6 42 08 91 17</a
                                 >
                             </li>
                             <li class="card-li">
@@ -160,8 +159,8 @@ import profilePic from "../assets/profile_pic.jpg";
                                 <a
                                     href="mailto:tristan.bony@proton.me"
                                     class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
-                                    >tristan.bony@proton.me</a
-                                >
+                                >tristan.bony@proton.me</a
+                            >
                             </li>
                         </address>
                     </li>
@@ -185,8 +184,8 @@ import profilePic from "../assets/profile_pic.jpg";
                             href="./pdf/CV_English.pdf"
                             target="_blank"
                             class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
-                            >Download my CV (English)</a
-                        >
+                        >Download my CV (English)</a
+                    >
                     </li>
                     <li>
                         <svg
@@ -208,8 +207,8 @@ import profilePic from "../assets/profile_pic.jpg";
                             href="./pdf/CV_French.pdf"
                             target="_blank"
                             class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
-                            >Download my CV (French)</a
-                        >
+                        >Download my CV (French)</a
+                    >
                     </li>
                 </ul>
             </div>
