--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,7 @@
 
 ---
 
-<header
-    class="header p-4 bg-white dark:bg-gray-800 text-base-content shadow-lg rounded-2xl w-full mb-4 flex flex-row"
->
+<header class="header p-4 bg-white dark:bg-gray-800 shadow-lg rounded-2xl w-full mb-4 flex flex-row">
     <a href="/" class="inline-flex">
         <img
             src="/images/favicon.svg"
