--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -16,7 +16,7 @@ import profilePic from "../assets/profile_pic.jpg";
     class="shadow-lg bg-white dark:bg-gray-800 w-full rounded-2xl p-4 mb-2"
 >
     <div class="flex flex-row flex-wrap justify-around items-center">
-        <article class="text-justify md:flex-[70%]">
+        <article class="text-justify xl:flex-[70%]">
             <h2 class="text-2xl font-bold mb-10">Who am I? (boring version)</h2>
             <p class="mb-3">
                 Immersed in the world of computer science from a very young age,
@@ -57,7 +57,7 @@ import profilePic from "../assets/profile_pic.jpg";
                 (notions).
             </p>
         </article>
-        <aside class="flex md:flex-[25%] flex-col flex-wrap md:ml-5 justify-around items-center shadow-lg rounded-2xl dark:bg-gray-700">
+        <aside class="flex xl:flex-[25%] flex-col flex-wrap xl:ml-5 justify-around items-center shadow-lg rounded-2xl dark:bg-gray-700">
             <div class="bg-blue-500 h-36 w-full mb-14 rounded-t-2xl">
                 <Image
                     class="block w-32 h-auto mt-14 mx-auto mb-0 rounded-2xl"
