--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -52,7 +52,7 @@ const cardStatus = (status: string) => {
 const { title, description, href, image, category, status } = Astro.props;
 ---
 
-<section class="card shadow-lg bg-white dark:bg-gray-800 md:w-[23%] m-2 w-[100%]">
+<section class="card shadow-lg bg-white dark:bg-gray-800 md:w-[45%] 2xl:w-[23%] m-2 w-[100%]">
 	<figure class="max-h-40">
 		<img src={image.path} alt={image.alt || "Missing image"} />
 	</figure>
