--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -31,7 +31,7 @@ const { title, description } = Astro.props;
 		<ViewTransitions />
 	</head>
 	<body class="bg-gray-100 dark:bg-gray-950 text-gray-800 dark:text-white">
-		<div class="md:my-4 md:mx-52 m-4">
+		<div class="xl:my-4 xl:mx-52 m-4">
 			<Header />
 			<slot />
 			<Footer />
