Text display improvement

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,7 +9,7 @@
             alt="Logo representing the initials T B"
             class="w-24 h-24"
         />
-        <h1 class="text-black dark:text-white font-bold text-4xl my-auto ms-4">
+        <h1 class="text-black dark:text-white font-bold text-4xl text-balance my-auto ms-4">
             Tristan Bony
         </h1>
     </a>
