--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -88,7 +88,7 @@ if (!images[image.path] && image.path != null) throw new Error(`"${image.path}" 
 			</div>
 		</div>
 		<h2 class="card-title">{title}</h2>
-		<p class="justify-normal text-justify">{description}</p>
+		<p class="justify-normal text-justify text-pretty">{description}</p>
 		<div class="card-actions justify-end">
 			<a
 				class="btn btn-primary bg-blue-500 hover:bg-blue-600 focus:bg-blue-800 border-none"
