--- a/src/layouts/GlobalLayout.astro
+++ b/src/layouts/GlobalLayout.astro
@@ -30,7 +30,7 @@ const { title, description } = Astro.props;
 		</style>
 		<ViewTransitions />
 	</head>
-	<body class="bg-gray-100 dark:bg-gray-950 text-gray-800 dark:text-white">
+	<body class="bg-gray-100 dark:bg-gray-950 text-gray-800 dark:text-white min-h-dvh">
 		<div class="xl:my-4 xl:mx-52 m-4">
 			<Header />
 			<slot />
