--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -17,14 +17,14 @@ import profilePic from "../assets/profile_pic.jpg";
 >
     <div class="flex flex-row flex-wrap justify-around items-center">
         <article class="text-justify xl:flex-[70%]">
-            <h2 class="text-2xl font-bold mb-10">Who am I? (boring version)</h2>
-            <p class="mb-3">
+            <h2 class="text-2xl font-bold mb-10">Who am I? (Boring version)</h2>
+            <p class="mb-5">
                 Immersed in the world of computer science from a very young age,
                 I quickly became curious to understand the technologies that are
                 part of our daily lives by tinkering and searching for
                 information by myself.
             </p>
-            <p class="mb-3">
+            <p class="mb-5">
                 That's why I decided to join ISIMA, a French engineering school
                 specialized in computer science after my CPGE at the Edouard
                 Branly high school in Lyon in order to acquire more information
@@ -32,26 +32,26 @@ import profilePic from "../assets/profile_pic.jpg";
                 me rigor with the help of scientific knowledge like mathematics,
                 industrial sciences, physics and, of course, computer science.
             </p>
-            <p class="mb-3">
+            <p class="mb-5">
                 My engineering studies have allowed me to acquire skills in C,
                 C++, C# (.NET), Java and SQL which completes my knowledge
                 acquired as a self-taught person, such as Python, HTML, CSS as
                 well as some PHP. Finally, I use GNU/Linux and Windows operating
                 systems.
             </p>
-            <p class="mb-3">
+            <p class="mb-5">
                 I then had the opportunity to do a double cursus in the
                 University of Oklahoma thanks to my motivation to succeed. I
-                discovered a new
+                discovered a new way of learning and a new culture.
             </p>
-            <p class="mb-3">
+            <p class="mb-5">
                 Besides my passion for technology, I also enjoy mountain biking,
                 skiing and billiards (Blackball/Snooker/9-ball). In my free
                 time, I also like to watch movies and series... and cat pictures
                 of course. By the way, I also started playing violin at the age
                 of 4 and traveled a lot.
             </p>
-            <p class="mb-3">
+            <p class="mb-5">
                 Finally, I studied three languages in addition of French (my
                 native language): English (C1), Spanish (B1) and Mandarin
                 (notions).
@@ -184,7 +184,7 @@ import profilePic from "../assets/profile_pic.jpg";
                             href="./pdf/CV_English.pdf"
                             target="_blank"
                             class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
-                        >Download my CV (English)</a
+                        >Download my CV (English) (Outdated)</a
                     >
                     </li>
                     <li>
@@ -207,7 +207,7 @@ import profilePic from "../assets/profile_pic.jpg";
                             href="./pdf/CV_French.pdf"
                             target="_blank"
                             class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
-                        >Download my CV (French)</a
+                        >Download my CV (French) (Outdated)</a
                     >
                     </li>
                 </ul>
