--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,6 +3,6 @@ const d: Date = new Date();
 const year: number = d.getFullYear();
 ---
 
-<footer class="footer footer-center p-4 bg-white dark:bg-gray-800 shadow-lg rounded-2xl text-base mt-2">
+<footer class="footer footer-center p-4 mt-2 bg-white rounded-2xl text-base shadow-lg dark:bg-gray-800">
     <p>Developed with 💙 by me | &copy; {year} </p>
 </footer>
