--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,6 +1,6 @@
 ---
-import type { ImageMetadata } from 'astro';
-import { Image } from 'astro:assets';
+import type { ImageMetadata } from "astro";
+import { Image } from "astro:assets";
 
 interface Props {
 	title: string;
@@ -60,17 +60,25 @@ const cardStatus = (status: string) => {
 const { title, description, href, image, category, status } = Astro.props;
 
 import placeholderImg from "../assets/card/placeholder.jpg";
-const images = import.meta.glob<{ default: ImageMetadata }>('/src/assets/card/*.{jpeg,jpg,png,gif}');
-if (!images[image.path] && image.path != null) throw new Error(`"${image.path}" does not exist in glob: "src/assets/card/*.{jpeg,jpg,png,gif}"`);
+const images = import.meta.glob<{ default: ImageMetadata }>(
+	"/src/assets/card/*.{jpeg,jpg,png,gif}",
+);
+if (!images[image.path] && image.path != null)
+	throw new Error(
+		`"${image.path}" does not exist in glob: "src/assets/card/*.{jpeg,jpg,png,gif}"`,
+	);
 ---
 
-<section class="card shadow-lg bg-white dark:bg-gray-800 md:w-[45%] 2xl:w-[23%] m-2 w-[100%]">
+<section
+	class="card w-full m-2 bg-white shadow-lg md:w-5/12 2xl:w-[23%] dark:bg-gray-800"
+>
 	<figure class="max-h-48">
 		{
-			image.path ?
+			image.path ? (
 				<Image src={images[image.path]()} alt={image.alt} />
-			:
+			) : (
 				<Image src={placeholderImg} alt="Missing image" />
+			)
 		}
 	</figure>
 	<article class="card-body">
@@ -78,12 +86,7 @@ if (!images[image.path] && image.path != null) throw new Error(`"${image.path}" 
 			<div class="badge badge-outline text-gray-500 dark:text-gray-300">
 				{cardTitle(category)}
 			</div>
-			<div
-				class:list={[
-					"badge badge-outline",
-					cardStatus(status).color
-				]}
-			>
+			<div class:list={["badge badge-outline", cardStatus(status).color]}>
 				{cardStatus(status).status}
 			</div>
 		</div>
@@ -91,10 +94,11 @@ if (!images[image.path] && image.path != null) throw new Error(`"${image.path}" 
 		<p class="justify-normal text-justify text-pretty">{description}</p>
 		<div class="card-actions justify-end">
 			<a
-				class="btn btn-primary bg-blue-500 hover:bg-blue-600 focus:bg-blue-800 border-none"
+				class="btn btn-primary bg-blue-500 border-none hover:bg-blue-600 focus:bg-blue-800"
 				href={href}
-				title={"Read more about " + title}>
-					Read more
+				title={"Read more about " + title}
+			>
+				Read more
 			</a>
 		</div>
 	</article>
