Added temporary updated CVs

--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -189,7 +189,7 @@ import profilePic from "../assets/profile_pic.jpg";
                             target="_blank"
                             class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
                         >
-                            Download my CV (English) (Outdated)
+                            Download my CV
                         </a>
                     </li>
                     <li>
@@ -213,7 +213,7 @@ import profilePic from "../assets/profile_pic.jpg";
                             target="_blank"
                             class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
                         >
-                            Download my CV (French) (Outdated)
+                            Télécharger mon CV
                         </a>
                     </li>
                 </ul>
