--- a/src/layouts/PresentationLayout.astro
+++ b/src/layouts/PresentationLayout.astro
@@ -1,5 +1,6 @@
 ---
 import { Image } from "astro:assets";
+import { Icon } from "astro-icon/components";
 
 const todaysDate: Date = new Date();
 const birthday: Date = new Date(2000, 4, 16);
@@ -10,7 +11,7 @@ const age: number = Math.floor(
 
 import profilePic from "../assets/profile_pic.jpg";
 
-const education = "Student in Computer Science @ University of Oklahoma && ISIMA";
+const education = "Student in CS @ OU && ISIMA";
 const location = "Norman, OK, USA";
 const phone = "+33(0)6 42 08 91 17";
 const phoneLink = "tel:+33642089117";
@@ -78,94 +79,35 @@ const emailLink = "mailto:" + email;
 					<li>
 						<span class="text-lg font-semibold">
 							Tristan Bony, {age}
-							<span class="italic">(he/him)</span>
+							<span class="italic">(he/him) </span>
+							<Icon name="france" size={24} class="inline" />
 						</span>
 					</li>
 					<li>
-					<svg
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke-width="1.5"
-							stroke="currentColor"
-							data-slot="icon"
-							class="w-4 inline"
-						>
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5"
-							></path>
-					</svg>
-						<span class="text-md">{education}</span
-						>
+						<Icon name="material-symbols:school-outline-rounded" size={16} class="inline" />
+						<span class="text-md">{education}</span>
 					</li>
 					<li>
 						<address>
 							<li class="card-li">
-								<svg
-									xmlns="http://www.w3.org/2000/svg"
-									fill="none"
-									viewBox="0 0 24 24"
-									stroke-width="1.5"
-									stroke="currentColor"
-									data-slot="icon"
-									class="w-4 inline"
-								>
-									<path
-										stroke-linecap="round"
-										stroke-linejoin="round"
-										d="M15 10.5a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
-									></path>
-									<path
-										stroke-linecap="round"
-										stroke-linejoin="round"
-										d="M19.5 10.5c0 7.142-7.5 11.25-7.5 11.25S4.5 17.642 4.5 10.5a7.5 7.5 0 1 1 15 0Z"
-									></path>
-								</svg>
+								<Icon name="material-symbols:location-on-outline-rounded" size={16} class="inline" />
 								<span class="text-md">{location}</span>
 							</li>
 							<li class="card-li">
-								<svg
-									xmlns="http://www.w3.org/2000/svg"
-									fill="none"
-									viewBox="0 0 24 24"
-									stroke-width="1.5"
-									stroke="currentColor"
-									data-slot="icon"
-									class="w-4 inline"
-								>
-									<path
-										stroke-linecap="round"
-										stroke-linejoin="round"
-										d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3"
-									></path>
-								</svg>
+								<Icon name="material-symbols:phone-android-outline-rounded" size={16} class="inline" />
 								<a
 									href={phoneLink}
+									title="Message me on Signal"
 									class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
 								>
 									{phone}
 								</a>
 							</li>
 							<li class="card-li">
-								<svg
-									xmlns="http://www.w3.org/2000/svg"
-									fill="none"
-									viewBox="0 0 24 24"
-									stroke-width="1.5"
-									stroke="currentColor"
-									data-slot="icon"
-									class="w-4 inline"
-								>
-									<path
-										stroke-linecap="round"
-										stroke-linejoin="round"
-										d="M21.75 6.75v10.5a2.25 2.25 0 0 1-2.25 2.25h-15a2.25 2.25 0 0 1-2.25-2.25V6.75m19.5 0A2.25 2.25 0 0 0 19.5 4.5h-15a2.25 2.25 0 0 0-2.25 2.25m19.5 0v.243a2.25 2.25 0 0 1-1.07 1.916l-7.5 4.615a2.25 2.25 0 0 1-2.36 0L3.32 8.91a2.25 2.25 0 0 1-1.07-1.916V6.75"
-									></path>
-								</svg>
+								<Icon name="material-symbols:mail-outline-rounded" size={16} class="inline" />
 								<a
 									href={emailLink}
+									title="Contact me by email"
 									class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
 								>
 									{email}
@@ -174,48 +116,22 @@ const emailLink = "mailto:" + email;
 						</address>
 					</li>
 					<li>
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke-width="1.5"
-							stroke="currentColor"
-							data-slot="icon"
-							class="w-4 inline"
-						>
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z"
-							></path>
-						</svg>
+						<Icon name="material-symbols:sim-card-download-outline-rounded" size={16} class="inline" />
 						<a
 							href="/pdf/CV_English.pdf"
 							target="_blank"
+							title="Download my CV"
 							class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
 						>
 							Download my CV
 						</a>
 					</li>
 					<li>
-						<svg
-							xmlns="http://www.w3.org/2000/svg"
-							fill="none"
-							viewBox="0 0 24 24"
-							stroke-width="1.5"
-							stroke="currentColor"
-							data-slot="icon"
-							class="w-4 inline"
-						>
-							<path
-								stroke-linecap="round"
-								stroke-linejoin="round"
-								d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m.75 12 3 3m0 0 3-3m-3 3v-6m-1.5-9H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z"
-							></path>
-						</svg>
+						<Icon name="material-symbols:sim-card-download-outline-rounded" size={16} class="inline" />
 						<a
 							href="/pdf/CV_French.pdf"
 							target="_blank"
+							title="Télécharger mon CV"
 							class="text-md hover:underline hover:decoration-blue-500 hover:decoration-2"
 						>
 							Télécharger mon CV
@@ -230,7 +146,7 @@ const emailLink = "mailto:" + email;
 					title="Visit my LinkedIn"
 					class="w-8 h-8 m-2 transition duration-300 ease-in-out hover:scale-125"
 				>
-					<img src="/images/linkedin_logo.svg" alt="LinkedIn" />
+					<Icon name="linkedin" title="Visit my LinkedIn" size={32} class="inline" />
 				</a>
 				<a
 					href="https://floss.social/@TristanB0"
@@ -238,7 +154,7 @@ const emailLink = "mailto:" + email;
 					title="Come see my toots"
 					class="w-8 h-8 m-2 transition duration-300 ease-in-out hover:scale-125"
 				>
-					<img src="/images/mastodon_logo.svg" alt="Mastodon" />
+					<Icon name="mastodon" title="Come see my toots" size={32} class="inline" />
 				</a>
 				<a
 					href="https://www.github.com/TristanB0"
@@ -246,7 +162,7 @@ const emailLink = "mailto:" + email;
 					title="Link to my projects"
 					class="w-8 h-8 m-2 transition duration-300 ease-in-out hover:scale-125 dark:hidden"
 				>
-					<img src="/images/github_logo.svg" alt="GitHub" />
+					<Icon name="github" title="Link to my projects" size={32} class="inline" />
 				</a>
 				<a
 					href="https://www.github.com/TristanB0"
@@ -254,7 +170,7 @@ const emailLink = "mailto:" + email;
 					title="Link to my projects"
 					class="w-8 h-8 m-2 transition duration-300 ease-in-out hidden hover:scale-125 dark:block"
 				>
-					<img src="/images/github_logo_white.svg" alt="GitHub" />
+					<Icon name="github_white" title="Link to my projects" size={32} class="inline" />
 				</a>
 			</div>
 		</aside>
